@@ -1,22 +1,21 @@
 package com.pi4j.crowpi;
 
-import com.pi4j.context.Context;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.*;
 
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 
-import static org.junit.jupiter.api.Assertions.*;
+import com.pi4j.context.Context;
+import com.pi4j.crowpi.helpers.InstanceAlreadyRunningException;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 public class LauncherTest {
-    protected static final List<Application> TEST_APPLICATIONS = new ArrayList<>(Arrays.asList(
-        new AppA(),
-        new AppB()
-    ));
+    protected static final List<Application> TEST_APPLICATIONS = List.of(new AppA(), new AppB());
 
     protected static boolean EXECUTED_APP_A, EXECUTED_APP_B;
     protected Launcher launcher;
@@ -84,6 +83,35 @@ public class LauncherTest {
         assertFalse(EXECUTED_APP_B);
     }
 
+	@SuppressWarnings("SynchronizationOnLocalVariableOrMethodParameter")
+	@Test
+	public void shouldNotStartTwice() throws ExecutionException, InterruptedException {
+		// given
+		final WaitApp waitApp = new WaitApp();
+		Launcher launcher = new Launcher(List.of(waitApp));
+
+		// when
+		ExecutorService executorService = Executors.newCachedThreadPool();
+		var future = executorService.submit(() -> launcher.execute(new String[] { "WaitApp" }));
+		Thread.sleep(50L);
+
+		// then 1
+		assertThrows(InstanceAlreadyRunningException.class, () -> launcher.execute(new String[] { "AppB" }));
+
+		// stop execution
+		synchronized (waitApp) {
+			System.out.println("Notifying  " + waitApp);
+			waitApp.notifyAll();
+		}
+		future.get();
+
+		// then 2
+		launcher.execute(new String[] { "AppB" });
+
+		// cleanup
+		executorService.shutdownNow();
+	}
+
     private static final class AppA implements Application {
         @Override
         public void execute(Context pi4j) {
@@ -97,4 +125,18 @@ public class LauncherTest {
             LauncherTest.EXECUTED_APP_B = true;
         }
     }
+
+	private static final class WaitApp implements Application {
+		@Override
+		public void execute(Context pi4j) {
+			synchronized (this) {
+				try {
+					System.out.println("Waiting on " + this);
+					this.wait();
+				} catch (InterruptedException e) {
+					System.out.println("Interrupted, ending thread.");
+				}
+			}
+		}
+	}
 }
